-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.5.0
-
Debian Wheezy, Kernel 3.6.11
-
3
-
11798
Missing void* pointers causes
context_lucid.c: In function ‘derive_key_lucid’: context_lucid.c:280:9: error: taking address of expression of type ‘void’ [-Werror] context_lucid.c:286:9: error: taking address of expression of type ‘void’ [-Werror] context_lucid.c:292:9: error: taking address of expression of type ‘void’ [-Werror]
and unused variable causes
lgss_keyring.c: In function ‘do_nego_rpc’: lgss_keyring.c:125:44: error: variable ‘res’ set but not used [-Werror=unused-but-set-variable] cc1: all warnings being treated as errors make[5]: *** [lgss_keyring-lgss_keyring.o] Error 1
I will provide a patch to fix this.