LU-4307 kerberos: compile errors with gss/kerberos support

Configure Lustre with parameters --with-krb5 --enable-gss
causes compile errors due to missing '*' and unused variable.
The errors are: taking address of expression of type ‘void’ [-Werror]
and variable ‘res’ set but not used [-Werror=unused-but-set-variable]

Signed-off-by: Thomas Stibor <thomas@stibor.net>
Change-Id: I20b0b0ffa3ea34ce0a954146ccc762b7c17c00de
Reviewed-on: http://review.whamcloud.com/8393
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Andrew Korty <ajk@iu.edu>
Reviewed-by: Nathaniel Clark <nathaniel.l.clark@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>